# ChiperHacks2026

./: .env.example  .gitignore  .mcp.json  .venv 2  AGENT_COMMS.md  PRD.md  dev.sh  pyproject.toml
arena/: .gitignore  README.md
arena/app/: package.json
arena/contract/: events.ts  target-hints.json
arena/judge/: README.md  answer-sheet.json  build-sheets.ts  harness.ts  judge.ts  llm.ts  mock-internal.ts  probes.ts
arena/orchestrator/: board.ts  emitter.ts  match.ts  reset.ts  server.ts
arena/scripts/: launch-defender.sh  move.ts  run-arena.sh
arena/tests/: exploits.test.ts  judge-integrity.test.ts  match.test.ts
attacker/: README.md  __init__.py  browser.py  bus.py  config.py  manifest.py  oob.py  runtime.py  selftest.py  server.py  test_hardening.py  tools.py
attacker/launch/: README.md  run_attacker.sh  settings.json  system_prompt.txt
defender/: README.md  __init__.py  bus.py  config.py  runtime.py  selftest.py  server.py  tools.py
defender/launch/: README.md  run_defender.sh  settings.json  system_prompt.txt
narrator/: README.md  __init__.py  config.py  emotion.py  engine.py  llm.py  run_narrator.sh  server.py  test_narrator.py  tts.py
runner/: README.md  __init__.py  __main__.py  clients.py  config.py  match.py  mockagents.py  processes.py  selftest.py  server.py  session.py  tap.py  test_tap.py
scripts/: arena-live.sh  arena-up.sh
tv/: .gitignore  .next  INTEGRATION.md  next.config.mjs  node_modules  package.json  tailwind.config.ts  tsconfig.json
tv/app/: globals.css  layout.tsx  package.json  page.tsx
tv/lib/: arenaState.ts  hub.ts  (+8 more)
(+50 files in other folders)
