[project]
name = "cyber-arena"
version = "0.1.0"
description = "AI Red swarm vs AI Blue defender — live hacking arena"
requires-python = ">=3.12,<3.13"
dependencies = [
    # bus + control planes
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=13",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "aiohttp>=3.10",
    # attacker MCP server
    "mcp>=1.0",
    "pyjwt>=2.8",
    # blue WAF
    "mitmproxy>=11,<13",
    # red swarm (model-agnostic agent runtime)
    "openai-agents>=0.0.10",
    "litellm>=1.50",
    "anthropic>=0.40",
    "openai>=1.50",
    "rich>=13.9",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]
